<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context="ott.hunter.more.HelpActivity">

    <include
        android:id="@+id/subscription_toolbar"
        layout="@layout/app_bar_layout"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_mlarge">

        <ImageView
            android:id="@+id/imgback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Support"
            android:textAllCaps="false"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/help" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="We're Happy to Hear From You"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <LinearLayout
                android:id="@+id/rel_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/call_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_call"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/fui_ic_phone_white_24dp"
                        android:tint="@color/white_trans"
                        tools:ignore="UseAppTint" />

                    <TextView
                        android:id="@+id/t3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="+91 8377003507"
                        android:textColor="@color/white_trans"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/mail_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/img_mail"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/fui_ic_mail_white_24dp"
                        android:tint="@color/white_trans"
                        tools:ignore="UseAppTint" />

                    <TextView
                        android:id="@+id/t5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="customercare@hunters.co.in"
                        android:textColor="@color/white_trans"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="Or Send Your Message"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Full Name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/blue_grey_300"
                android:textSize="16dp" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Email Address"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"

                android:textColor="@color/blue_grey_300"
                android:textSize="16dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email1"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Phone Number "
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/blue_grey_300"
                android:textSize="16dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtmobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="16dp" />


            <!-- <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/spacing_medium"
                 android:visibility="visible"
                 app:endIconMode="password_toggle">-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Select Issue "

                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/blue_grey_300"
                android:textSize="16dp" />


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerissue"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="12dp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Message "
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/blue_grey_300"
                android:textSize="16dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtmessage"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:hint="@string/entermessage"
                android:maxLines="5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/login_field_button_red"
                android:backgroundTint="@color/colorPrimary"
                android:text="Submit"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>






